# Sams-App

./: .gitignore  CMakeLists.txt  Main.qml  README.md  cameradiscovery.cpp  cameradiscovery.h  cameramanager.cpp  cameramanager.h  main.cpp  recordingmanager.cpp  recordingmanager.h  streammanager.cpp  streammanager.h  videoplayer.cpp  videoplayer.h
android/: AndroidManifest.xml
android/res/xml/: network_security_config.xml
